# my-summary

./: README.md
Deep Learning/: README.md
Deep Learning/assignment 1/: homework_differentiation.ipynb
Deep Learning/assignment 2/: hw2_part1.ipynb  hw2_part2.ipynb  notmnist.py
Deep Learning/assignment 3/: hw03_part1_both.ipynb  hw03_part2_autoencoders_basic.ipynb  hw03_part3_gan_basic.ipynb  hw03_part3a_gan_advanced_new.ipynb  hw03_part3b_prd_score_advanced_new.ipynb
Intro to DS/: README.md
Intro to DS/Project/: WESAD Dataset.pptx
Intro to DS/assignment 1/: Assignment 1 Vlasov Andrey DS.ipynb
Introduction to Blockchain/: README.md
Introduction to Blockchain/Project/Source_code/Exonum/: Cargo.toml
Introduction to Blockchain/assignment  1/: HW1.ipynb
Introduction to Blockchain/assignment 2/: HW2.ipynb
Introduction to Blockchain/seminars/: Seminar_1.ipynb  Seminar_2.ipynb  Seminar_3.ipynb
Machine Learning/: README.md
Machine Learning/Project/: Presentation.pptx
Machine Learning/assignment 1/: ML2019HW01-part1.ipynb  ML2019HW01-part2.ipynb
Machine Learning/assignment 2/: ML2019HW02-part1.ipynb  ML2019HW02-part2.ipynb
Machine Learning/assignment 3/: ML2019HW03-part1.ipynb
Machine Learning/assignment 4/: ML2019HW04.ipynb
Neural NLP/: README.md
Neural NLP/Project/: Project_Summarization.ipynb
Neural NLP/hw1_NaiveBayes/: assignment1 Andrey Vlasov.ipynb  classifier_best.py  classifier_bnb.py  classifier_mnb.py
Neural NLP/hw2_LogReg_FFNN/: assignment2.ipynb  classifier_best.py  (+2 more)
Numerical Linear Algebra/: README.md
mmta2019/: README.md
(+26 files in other folders)
