[workspace]
members = [
    "exonum",
    "examples/my",
    "examples/my2",
    "examples/cryptocurrency",
    "examples/cryptocurrency-advanced/backend",
    "examples/timestamping/backend",
    "services/configuration",
    "services/time",
    "testkit",
    "testkit/server",
    "components/build",
    "components/crypto",
    "components/derive",
    "shamir",
    "rust-threshold-secret-sharing",]
exclude = [ "exonum/fuzz" ]
